# os-labs

lab-1/: Makefile
lab-1/src/: calc.c  main.c
lab-2/: CMakeLists.txt
lab-2/.devcontainer/: devcontainer.json
lab-2/include/: experiment.h
lab-2/src/: benchmark.c  experiment.c  main.c
lab-3/: CMakeLists.txt
lab-3/include/: memory.h  structs.h
lab-3/src/: calc.c  main.c
lab-3/tests/: t1.txt  t2.txt
lab-4/: CMakeLists.txt
lab-4/.devcontainer/: Dockerfile
lab-4/libs/: first.c  second.c
lab-4/src/: main.c
